fix bug on VotingApplication page

--- a/ServerApp/Components/Pages/VotingApplication.razor.css
+++ b/ServerApp/Components/Pages/VotingApplication.razor.css
@@ -21,6 +21,7 @@ a:link {
 }
 
 .leftside {
+    width: 0;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -78,5 +79,8 @@ a:link {
         align-items: center;
         justify-content: center;
         gap: 2rem;
+    }
+    .leftside {
+        width: auto;
     }
 }
